force-app/main/default/objects/MCP__c/MCP__c.object-meta.xml
<CustomObject>
    <label>( Deprecated ) MCP</label>
    <nameField>
        <displayFormat>MCP-{0000000}</displayFormat>
        <label>MCP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>( Deprecated ) MCP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>