force-app/main/default/objects/MCP__c/fields/MCP_Name__c.field-meta.xml
<CustomField>
    <fullName>MCP_Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>