force-app/main/default/objects/MCP__c/fields/MCP_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>MCP_Opportunity_Amount__c</fullName>
    <label>MCP Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>