force-app/main/default/objects/MCP__c/fields/MCP_Ratio__c.field-meta.xml
<CustomField>
    <fullName>MCP_Ratio__c</fullName>
    <label>MCP Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>