force-app/main/default/objects/MCP__c/fields/MCP_Value__c.field-meta.xml
<CustomField>
    <fullName>MCP_Value__c</fullName>
    <label>MCP Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>